--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 </head>
 
 <body>
-
   <div class="loading" id="loading"></div>
   <div class="app" id="app" hidden>
     <div class="currentWeather">
@@ -25,7 +24,7 @@
       </div>
     </div>
     <div class="weeklyWeather">
-      <div class="weeklyWeather-marker"></div>
+      <div class="weeklyWeather-marker" data-marker="true"></div>
       <div class="tabs" id="tabs">
         <div class="tabList" role="tablist">
           <div class="tab" role="tab" aria-selected="true" id="tab-0">
