acabado para enviar

--- a/index.html
+++ b/index.html
@@ -39,6 +39,28 @@
                 </div>
             </div>
         </div>
+        <div class="dailyWeather">
+            <div class="dailyWeather-mesures">
+                <div class="mesure">
+                    <p class="ask">Máx:</p>
+                    <p class="reply" id="mesure-0"></p>
+                </div>
+                <div class="mesure">
+                    <p class="ask">Mín:</p>
+                    <p class="reply" id="mesure-1"></p>
+                </div>
+            </div>
+            <div class="dailyWeather-mesures">
+                <div class="mesure">
+                    <p class="ask">Viento:</p>
+                    <p class="reply" id="mesure-2"></p>
+                </div>
+                <div class="mesure">
+                    <p class="ask">Humedad:</p>
+                    <p class="reply" id="mesure-3"></p>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 <script src='./js/index.js' type="module"></script>
